--- a/src/opp.css
+++ b/src/opp.css
@@ -20,6 +20,15 @@ html, body { width:100%; height:100%; margin:0; padding:0; font-size:100%; font-
     background-color: white;
 }
 
+#loading{
+  position:absolute;
+  background-color: white;
+  width: 100%;
+  height:100%;
+  z-index: 1200;
+  opacity:100%;
+}
+
 .vsplitter {
   flex: 0 0 auto;
   float: left;
