--- a/src/templates/about_sample.html
+++ b/src/templates/about_sample.html
@@ -1,7 +1,7 @@
 <p class="title">A propos</p>
 <div class='desc'>
   <p>
-    <b>L'observatoire photographique du paysage</b> est outil de gestion dont le principe consiste à photographier régulièrement le même point de vue. Les séries photographiques ainsi obtenues <b>nous aident à mieux percevoir les évolutions paysagères.</b>
+    <b>L'observatoire photographique du paysage</b> est un outil de gestion dont le principe consiste à photographier régulièrement le même point de vue. Les séries photographiques ainsi obtenues <b>nous aident à mieux percevoir les évolutions paysagères.</b>
   </p>
   <p>
     Cette application a été développée par <a href="http://www.causses-et-cevennes.fr/">l'Entente Interdépartementale des Causses et des Cévennes</a> dans le but de <b>valoriser de façon ludique nos clichés et ceux de nos partenaires.</b>
