--- a/src/opp.css
+++ b/src/opp.css
@@ -50,7 +50,7 @@ html, body { width:100%; height:100%; margin:0; padding:0; font-size:100%; font-
   display:none;
  }
 
-.panel { height:100%; padding:20px; overflow:scroll; white; }
+.panel { height:100%; padding:20px; overflow:scroll; background-color: white; }
 
 .panel .title {
   font-size: 1.25em;
@@ -185,7 +185,6 @@ html, body { width:100%; height:100%; margin:0; padding:0; font-size:100%; font-
   toolbar
   ######################################## */
 
-
 .bt {
     border: none;
     cursor: pointer;
@@ -194,6 +193,8 @@ html, body { width:100%; height:100%; margin:0; padding:0; font-size:100%; font-
     margin: auto;
     display: block;
     position: relative;
+    padding: 0;
+    background-color: transparent;
 }
 
 #toggleInfosBt {
