--- a/src/opp.css
+++ b/src/opp.css
@@ -42,8 +42,10 @@ html, body { width:100%; height:100%; margin:0; padding:0; font-size:100%; font-
   background-color: #f2f2f2ff;
 }
 
+
+
 /* ########################################
-   Infos panel
+   Infos/about panel
    ######################################## */
 
 #sidePanel:not(.active), .panel:not(.active){
@@ -89,6 +91,21 @@ html, body { width:100%; height:100%; margin:0; padding:0; font-size:100%; font-
 }
 .panel img.large {
   width:250px;
+}
+
+#about {
+  min-height:90%;
+}
+
+hr{
+  border: 0;
+  height: 1px;
+  background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0));
+}
+
+#copyright{
+  text-align: center;
+  font-size: 0.75em;
 }
 
 /* ########################################
