--- a/src/templates/about_sample.html
+++ b/src/templates/about_sample.html
@@ -4,10 +4,6 @@
     <b>L'observatoire photographique du paysage</b> est un outil de gestion dont le principe consiste à photographier régulièrement le même point de vue. Les séries photographiques ainsi obtenues <b>nous aident à mieux percevoir les évolutions paysagères.</b>
   </p>
   <p>
-    Cette application a été développée par <a href="http://www.causses-et-cevennes.fr/">l'Entente Interdépartementale des Causses et des Cévennes</a> dans le but de <b>valoriser de façon ludique nos clichés et ceux de nos partenaires.</b>
-  </p>
-    <img src="icons/logos/eicc.png" class='large'></img><img src="icons/logos/pnc_logo.jpg"></img><img src="icons/logos/4CAUE.png"></img>
-  <p>
-    <a class='vopp'>VOPP</a>, le code source de ce site, est ouvert et peut être réutilisé pour valoriser d'autres obversatoires photographiques. <a href="https://github.com/CaussesCevennes/VOPP">Lien vers le dépôt.</a>
+    Ce site utilise l'application <a class='vopp'>VOPP</a> développée par <a href="http://www.causses-et-cevennes.fr/">l'Entente Interdépartementale des Causses et des Cévennes</a>. Le code source est <a href="https://github.com/CaussesCevennes/VOPP">ouvert</a> et peut être réutilisé pour valoriser d'autres obversatoires photographiques.
   </p>
 </div>
