--- a/src/opp.css
+++ b/src/opp.css
@@ -436,7 +436,7 @@ li:hover, li.selected, tr:hover, tr.selected  {
     border-radius: 50%;
     text-align: center;
     font-weight: 700;
-    font-family: monospace;
+    font-family: sans-serif;
     border-width: 1px;
     border-style: solid;
 }
@@ -525,8 +525,8 @@ li:hover, li.selected, tr:hover, tr.selected  {
   width:100%;
   height:100%;
   font-weight: 700;
-  font-family: monospace;
-  font-size: 12px;
+  font-family: sans-serif;
+  font-size: 11px;
   color:white;
   line-height: 40px;
   text-align: center;
