--- a/src/opp.css
+++ b/src/opp.css
@@ -52,7 +52,11 @@ html, body { width:100%; height:100%; margin:0; padding:0; font-size:100%; font-
   display:none;
  }
 
-.panel { height:100%; padding:20px; overflow:scroll; background-color: white; }
+.panel {
+  height:100%;
+  padding:20px;
+  overflow-y:scroll;
+  background-color: white; }
 
 .panel .title {
   font-size: 1.25em;
@@ -203,55 +207,55 @@ hr{
   ######################################## */
 
 .toolbarBt {
-    border: none;
-    cursor: pointer;
-    height: 32px;
-    width: 32px;
-    margin: auto;
-    display: block;
-    position: relative;
-    padding: 3px;
-    background-color: transparent;
+  border: none;
+  cursor: pointer;
+  height: 32px;
+  width: 32px;
+  margin: auto;
+  display: block;
+  position: relative;
+  padding: 3px;
+  background-color: transparent;
 }
 
 /* Tooltip text */
 .toolbarBt .tooltip {
- outline: none;
- cursor : default;
- visibility: hidden;
- width: 120px;
- background-color: black;
- color: white;
- font-weight: bold;
- text-align: center;
- padding: 5px 2px;
- border-radius: 6px;
- /* Position the tooltip text */
- position: absolute;
- z-index: 1100;
- top:4px;
- right: 125%;
- /* Fade in tooltip */
- opacity: 0;
- transition: opacity 0.3s;
+  outline: none;
+  cursor : default;
+  visibility: hidden;
+  width: 120px;
+  background-color: black;
+  color: white;
+  font-weight: bold;
+  text-align: center;
+  padding: 5px 2px;
+  border-radius: 6px;
+  /* Position the tooltip text */
+  position: absolute;
+  z-index: 1100;
+  top:4px;
+  right: 125%;
+  /* Fade in tooltip */
+  opacity: 0;
+  transition: opacity 0.3s;
 }
 
 /* Tooltip arrow */
 .toolbarBt .tooltip::after {
- content: "";
- position: absolute;
- top: 25%;
- left: 100%;
- border-width: 6px;
- border-style: solid;
- border-color: transparent transparent transparent black;
+  content: "";
+  position: absolute;
+  top: 25%;
+  left: 100%;
+  border-width: 6px;
+  border-style: solid;
+  border-color: transparent transparent transparent black;
 }
 
 /* Show the tooltip text when the pointer is over the tooltip container */
 .toolbarBt:hover .tooltip {
- visibility: visible;
- opacity: 0.6;
- transition-delay:1s;
+  visibility: visible;
+  opacity: 0.6;
+  transition-delay:1s;
 }
 
 
@@ -298,6 +302,23 @@ hr{
  display: inline;
 }
 
+#searchPanel{
+  display: flex;
+  flex-flow: column;
+  overflow-y: hidden;
+}
+
+#resultsPane{
+  overflow-y: scroll;
+}
+
+.searchTitle{
+  font-size: 1.25em;
+  font-weight: bolder;
+  margin: 10px 0 10px 0;
+
+}
+
 .searchPanelBt {
     border: none;
     cursor: pointer;
@@ -307,20 +328,34 @@ hr{
     background-color: transparent;
 }
 
-
 #clearSearchBt {
   background: url("icons/clear_search.svg?v=102") no-repeat;
   background-size: contain;
+  float:right;
+  vertical-align: middle;
+}
+
+.filter{
+  display:flex;
+  align-items: center;
+  margin: 10px 0 10px 0;
+}
+
+.label{
+  flex:0 0 110px; /*fixed size*/
+}
+
+.textFilter, .dropDownFilter{
+  flex: 1 1 auto;
+  min-width:0; /*By default flex items won't shrink below their minimum content size*/
 }
 
 .dropDownFilter {
-  /*display : block;*/
-  width: 200px;
   height: 30px;
-  margin: 10px 0 10px 0;
   border-radius: 5px;
+  border: 1px solid #aaa;
   color: black;
-  background-color: rgba(255,255,255,0.5);
+  background-color: white;
   background-image: url(icons/br_down.png);
   background-repeat: no-repeat;
   background-position: 95%;
@@ -333,7 +368,6 @@ ul {
  list-style-type: none;
  text-align: left;
  width:95%;
- font-size:1em;
  overflow-y:auto;
  padding:0;
  margin:0;
@@ -343,11 +377,16 @@ li, tr {
  cursor: pointer;
  background-color:white;
  color:#2c5aa0ff;
+ font-size:1em;
  font-weight: bold;
  padding:5px;
  border-bottom: 1px dotted #c3d4ef;
 }
 
+
+.dateRange{
+ font-size:0.75em;
+}
 
 li:hover, li.selected, tr:hover, tr.selected  {
  background-color: #2c5aa0ff;
@@ -407,7 +446,7 @@ li:hover, li.selected, tr:hover, tr.selected  {
 
 
 /* ########################################
-   Cluster
+   Clusters
    ######################################## */
 
 .cluster {
