--- a/src/opp.css
+++ b/src/opp.css
@@ -4,10 +4,11 @@ html, body { width:100%; height:100%; margin:0; padding:0; font-size:100%; font-
     #logo {position:absolute; height:100%; top:5%; right:0;}
 #container {position:relative; width:100%; height:95%; display:flex; flex-direction:row; overflow:hidden;}
     #map {position:relative; width:35%; height:100%; flex:0 0 auto;}
-    #photos {position:relative; height:100%; flex:1 1 auto; display:flex; flex-direction:column;}
-        #photo1 {width:100%; height:100%; flex:1 1 auto;}
-        #photo2 {width:100%; height:50%; display:none; flex:1 1 auto;}
-        #timeline {width:100%; height:20%; display:none; flex:1 1 auto;}
+    #photosWrapper {position:relative; height:100%; flex:1 1 auto; display:flex; flex-direction:column;}
+      #photos {position:relative; height:100%; flex:1 1 auto;}
+          #photo1 {width:100%; height:100%; }
+          #photo2 {width:100%; height:50%; display:none;}
+      #timeline {width:100%; height:20%; display:none; flex:1 1 auto;}
     #sidePanel {width:25%; height:100%; flex:0 0 auto;}
     #toolbar {width:35px; height:100%; flex:0 0 auto;}
 
