--- a/src/opp.css
+++ b/src/opp.css
@@ -206,8 +206,18 @@ hr{
 }
 
 /* ########################################
-  toolbar
+  buttons, toolbar, tootip
   ######################################## */
+
+.panelBt {
+  border: none;
+  cursor: pointer;
+  height: 28px;
+  width: 28px;
+  display: block;
+  padding: 4px;
+  background-color: transparent;
+}
 
 .toolbarBt {
   border: none;
@@ -223,7 +233,7 @@ hr{
 }
 
 /* Tooltip text */
-.toolbarBt .tooltip {
+.tooltip {
   outline: none;
   cursor : default;
   visibility: hidden;
@@ -245,7 +255,7 @@ hr{
 }
 
 /* Tooltip arrow */
-.toolbarBt .tooltip::after {
+.tooltip::after {
   content: "";
   position: absolute;
   top: 25%;
@@ -256,7 +266,7 @@ hr{
 }
 
 /* Show the tooltip text when the pointer is over the tooltip container */
-.toolbarBt:hover .tooltip {
+.toolbarBt:hover .tooltip, .panelBt:hover .tooltip {
   visibility: visible;
   opacity: 0.6;
   transition-delay:1s;
