--- a/src/opp.css
+++ b/src/opp.css
@@ -609,20 +609,26 @@ li:hover, li.selected, tr:hover, tr.selected  {
    line-height: 24px;
 }
 
+/* to display control side by side */
+/*
+.leaflet-top.leaflet-left .leaflet-control{
+  clear: none;
+}
+*/
+
 .zoomToExtentBt{
-  width:30px;
-  height: 30px;
+  width:33px;
+  height: 33px;
   background: url("icons/zoom_extent.svg?v=102") no-repeat;
   background-size: contain;
   cursor: pointer;
-  border: none;
+  background-color: rgba(255, 255, 255, 0.8);
+  border: 2px solid rgba(0, 0, 0, 0.25);
+  border-radius: 4px;
 }
 
-
 .zoomToExtentBt:hover{
-  background-color: #f4f4f4;
-  border: 2px solid rgba(128, 128 ,128, 0.5);
-  border-radius: 4px;
+  background-color: rgba(255, 255, 255, 1);
 }
 
 
