--- a/src/opp.css
+++ b/src/opp.css
@@ -1,8 +1,8 @@
-html, body { width:100%; height:100%; margin:0; padding:0; font-size:100%; font-family:'Quicksand', sans-serif;}
-#head {position:relative; width:100%; height:5%; overflow:hidden; color:black; background:white;}
-    #title {position:absolute; top:25%; left:1%; width:75%; letter-spacing:0.5em; font-size:2vmin;}
-    #logo {position:absolute; height:100%; top:5%; right:0;}
-#container {position:relative; width:100%; height:95%; display:flex; flex-direction:row;}
+html, body { width:100%; height:100%; margin:0; padding:0; font-size:100%; font-family:'Quicksand', sans-serif; display:flex; flex-direction:column;}
+#head {position:relative; width:100%; height:auto; overflow:hidden; color:black; background:white; padding:10px;}
+    #title {display:inline-block; width:75%; height:auto; letter-spacing:0.5em; font-size:2vmin; overflow-wrap: break-word;}
+    #logo {position: absolute; height:100%; top:0; right:0; }
+#container {position:relative; width:100%; display:flex; flex-direction:row; flex-grow: 1;}
     #map {position:relative; width:35%; height:100%; flex:0 0 auto; max-width:80%; min-width: 0;}
     #photosWrapper {position:relative; width:40%; height:100%; flex:1 1 auto; display:flex; flex-direction:column; min-width: 0;}
       #photos {position:relative; height:100%; flex:1 1 auto;}
