--- a/src/opp.css
+++ b/src/opp.css
@@ -2,15 +2,16 @@ html, body { width:100%; height:100%; margin:0; padding:0; font-size:100%; font-
 #head {position:relative; width:100%; height:auto; overflow:hidden; color:black; background:white; padding:10px;}
     #title {display:inline-block; width:75%; height:auto; letter-spacing:0.5em; font-size:2vmin; overflow-wrap: break-word;}
     #logo {position: absolute; height:100%; top:0; right:0; }
+
 #container {position:relative; width:100%; display:flex; flex-direction:row; flex-grow: 1;}
-    #map {position:relative; width:35%; height:100%; flex:0 0 auto; max-width:80%; min-width: 0;}
-    #photosWrapper {position:relative; width:40%; height:100%; flex:1 1 auto; display:flex; flex-direction:column; min-width: 0;}
-      #photos {position:relative; height:100%; flex:1 1 auto;}
-          #photo1 {width:100%; height:100%; }
-          #photo2 {width:100%; height:50%; display:none;}
-      #timeline {width:100%; height:20%; display:none; flex:1 1 auto;}
-    #sidePanel {width:25%; height:100%; flex:0 0 auto; max-width:40%; min-width: 5%;}
-    #toolbar {width:38px; height:100%; flex:0 0 auto;}
+#map {position:relative; width:35%; height:100%; flex:0 0 auto; max-width:80%; min-width: 0;}
+#photosWrapper {position:relative; width:40%; height:100%; flex:1 1 auto; display:flex; flex-direction:column; min-width: 0;}
+#photos {position:relative; height:100%; flex:1 1 auto;}
+#photo1 {width:100%; height:100%; }
+#photo2 {width:100%; height:50%; display:none;}
+#timeline {width:100%; height:20%; display:none; flex:1 1 auto;}
+#sidePanel {width:25%; height:100%; flex:0 0 auto; max-width:40%; min-width: 5%;}
+#toolbar {width:38px; height:100%; flex:0 0 auto;}
 
 * {
  box-sizing: border-box;
@@ -104,7 +105,7 @@ html, body { width:100%; height:100%; margin:0; padding:0; font-size:100%; font-
   min-height:90%;
 }
 
-hr{
+#container hr{
   border: 0;
   height: 1px;
   background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0));
@@ -119,7 +120,7 @@ hr{
   Photo widgets
   ######################################## */
 
-.widgets {
+#container .widgets {
   position:absolute;
   width:170px;
   height:auto;
@@ -127,15 +128,15 @@ hr{
   display: none;
 }
 
-.widgets>*{
+#container .widgets>*{
   display:flex;
 }
 
-.widgets.topLeft{ position:absolute; top:20px; left:20px; right:auto; }
-.widgets.middleLeft { position:absolute; top:calc(50% + 20px); left:20px; right:auto; }
-.widgets.topRight { position:absolute; top:20px; left:auto; right:20px; }
+#container .widgets.topLeft{ position:absolute; top:20px; left:20px; right:auto; }
+#container .widgets.middleLeft { position:absolute; top:calc(50% + 20px); left:20px; right:auto; }
+#container .widgets.topRight { position:absolute; top:20px; left:auto; right:20px; }
 
-.widgets .alignRight{
+#container .widgets .alignRight{
   justify-content: flex-end;
 }
 
@@ -250,7 +251,7 @@ hr{
 }
 
 /* Tooltip text */
-.tooltip {
+#container .tooltip {
   outline: none;
   cursor : default;
   visibility: hidden;
@@ -271,7 +272,7 @@ hr{
 }
 
 /* Tooltip arrow */
-.tooltip::after {
+#container .tooltip::after {
   content: "";
   position: absolute;
   top: 6px;
@@ -282,13 +283,13 @@ hr{
 }
 
 /* Show the tooltip text when the pointer is over the tooltip container */
-.toolbarBt:hover .tooltip, .panelBt:hover .tooltip {
+#container .toolbarBt:hover .tooltip, .panelBt:hover .tooltip {
   visibility: visible;
   opacity: 0.6;
   transition-delay:1s;
 }
 
-#toolbar {
+#container #toolbar {
   --tb-icon-base-color: white;
   --toolbar-select-color: #aa0000ff;
 }
@@ -580,7 +581,7 @@ hr{
   -webkit-appearance: none; /* Safari and Chrome */
 }
 
-ul {
+#container ul {
  list-style-type: none;
  text-align: left;
  width:95%;
@@ -589,7 +590,7 @@ ul {
  margin:0;
 }
 
-li, tr {
+#container li, #container tr {
  cursor: pointer;
  background-color:white;
  color:#2c5aa0ff;
@@ -598,14 +599,14 @@ li, tr {
  border-bottom: 1px dotted #c3d4ef;
 }
 
-li div.line1){
+#container li div.line1){
  font-size:1em;
 }
-li div:not(.line1){
+#container li div:not(.line1){
  font-size:0.75em;
 }
 
-li:hover, li.selected, tr:hover, tr.selected  {
+#container li:hover, #container li.selected, #container tr:hover, #container tr.selected  {
  background-color: #2c5aa0ff;
  color: white !important;
 }
