revert providers.json et themes.json files, Title can now be defined in theme

--- a/src/templates/about.html
+++ b/src/templates/about.html
@@ -11,7 +11,7 @@
   <p>
     Cette application a été développée par <a href="http://www.causses-et-cevennes.fr/">l'Entente Interdépartementale des Causses et des Cévennes</a> dans le but de <b>valoriser de façon ludique nos clichés et ceux de nos partenaires.</b>
   </p>
-    <img src="/wp-content/plugins/vopp/VOPP/src/icons/logos/eicc.png" class='large'></img><img src="icons/logos/pnc_logo.jpg"></img><img src="/wp-content/plugins/vopp/VOPP/src/icons/logos/4CAUE.png"></img>
+    <img src="icons/logos/eicc.png" class='large'></img><img src="icons/logos/pnc_logo.jpg"></img><img src="icons/logos/4CAUE.png"></img>
   <p>
     <a class='vopp'>VOPP</a>, le code source de ce site, est ouvert et peut être réutilisé pour valoriser d'autres obversatoires photographiques. <a href="https://github.com/CaussesCevennes/VOPP">Lien vers le dépôt.</a>
   </p>
